[package]
name = "node-executor"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
scale-info = { version = "1.0", features = ["derive"] }
node-primitives ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
node-runtime = {path="../runtime"}
sc-executor ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-keystore ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-state-machine ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-trie ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-benchmarking ={ git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

[features]
wasmtime = ["sc-executor/wasmtime"]
wasmi-errno = ["sc-executor/wasmi-errno"]
stress-test = []

[[bench]]
name = "bench"
harness = false
